# Budget-App

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CALCULATION_ENGINE_VALIDATION_REPORT.md  CLAUDE.md  DOCUMENTATION_INDEX.md  EFIR_Budget_App_PRD_v1_2.md  EFIR_Budget_App_TSD_v1_2.md  EFIR_Budget_Model_Documentation.md  EFIR_Budget_Planning_Requirements_v1.2.md  EFIR_Data_Summary_v2.md  EFIR_Enrollment_Analysis_v2.md  EFIR_Workforce_Planning_Logic.md  ENROLLMENT_PROJECTION_IMPLEMENTATION_PLAN.md  PERFORMANCE_REFACTORING_PLAN.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2.5_IMPLEMENTATION_CHECKLIST.md  PHASE_3.5_AG_GRID_INTEGRATION.md  PHASE_3.5_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  SECURITY_AND_CACHE_FIXES.md  STACK_VERSION_REVIEW.md  SUPABASE_SETUP_GUIDE.md  TEST_COVERAGE_80_PERCENT_PLAN.md  TEST_COVERAGE_95_PERCENT_PLAN.md  TEST_COVERAGE_SUMMARY.md  docker-compose.yml  package.json  pnpm-lock.yaml  setup-credentials.sh  test-cors.sh  verify-admin-access.sh  verify-setup.sh
backend/: .coverage  .env.example  .gitignore  AGENT_12_API_COVERAGE_FINAL_REPORT.md  API_TEST_COVERAGE_EXPANSION_REPORT.md  COVERAGE_PROGRESS_UPDATE_DEC_5.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  PHASE_2.3_PERFORMANCE_OPTIMIZATION.md  PHASE_3.1_WRITEBACK_SCHEMA.md  PHASE_3.2_WRITEBACK_API.md  PHASE_6_4_IMPLEMENTATION_SUMMARY.md  PHASE_9_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP_JWT_AUTH.md  TEST_EXPANSION_SUMMARY.md  alembic.ini  coverage.json  debug_budget_create.py  debug_endpoint_direct.py  debug_response_serialization.py  fly.toml  pyproject.toml  pytest.ini  test_budget_debug.py  verify_materialized_views.py  verify_phase_6_4.py
backend/alembic/: env.py
backend/alembic/versions/: 20251130_2340_initial_configuration_layer.py  20251201_0015_planning_layer.py  20251201_0030_consolidation_layer.py  20251201_0045_fix_critical_issues.py  20251201_0057_analysis_layer.py  20251201_0100_class_structure_validation.py  20251201_0138_strategic_layer.py  20251202_0800_performance_indexes.py  20251202_2315_add_materialized_views_for_kpi_dashboard.py  20251202_2330_planning_cells_writeback.py  20251205_1200_seed_reference_data_and_distributions.py  20251206_0100_add_audit_columns_nationality_distributions.py  20251206_1400_seed_subjects.py  20251206_1800_historical_comparison.py  20251206_2000_workforce_personnel.py  20251210_1200_fix_function_security_rls_performance.py  20251212_0001_enrollment_projection_tables.py  20251212_0001a_add_organizations_table.py  20251212_0200_enrollment_derived_parameters.py  20251212_0300_add_audit_columns_enrollment_tables.py  20251213_0100_add_organization_id_to_budget_versions.py  20251213_0200_add_retain_lateral_columns.py  20251213_0300_fix_academic_year_display.py  20251215_0250_rename_budget_version_id_to_version_id.py  20251215_0400_phase_3b_table_prefixes_scenario_type.py  20251215_0500_phase_4a_enrollment_consolidation.py  20251215_0600_phase_4b_personnel_consolidation.py  20251215_0700_phase_4c_financial_consolidation.py  20251215_0800_add_school_period.py  20251216_0100_add_rls_settings_class_size_params.py  20251216_0200_remove_school_period.py  20251216_1800_rename_budget_tables_and_fields.py  20251218_2240_add_default_retention_rate_to_academic_.py
backend/app/: __init__.py  database.py  main.py
backend/app/core/: __init__.py  cache.py  logging.py  pagination.py  reference_cache.py  security.py
backend/app/data/: __init__.py  curriculum_templates.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/engine/: __init__.py  engine_golden_rules.md
backend/app/middleware/: __init__.py  auth.py  metrics.py  rate_limit.py  rbac.py
backend/app/models/: __init__.py  admin.py  analysis.py  auth.py  base.py  configuration.py  consolidation.py  enrollment_projection.py  finance.py  insights.py  integrations.py  personnel.py  planning.py  reference.py  settings.py  strategic.py  students.py  teachers.py
backend/app/routes/: health.py
backend/app/schemas/: __init__.py  analysis.py  configuration.py  consolidation.py  costs.py  dhg.py  enrollment.py  enrollment_projection.py  enrollment_settings.py  historical.py  integrations.py  kpi.py  personnel.py  planning.py  planning_progress.py  revenue.py  writeback.py
backend/app/services/: __init__.py  aefe_integration.py  aefe_service.py  base.py  budget_actual_service.py  budget_version_service.py  capex_service.py  cascade_service.py  class_size_service.py  class_structure_service.py  configuration_service.py  cost_service.py  (+26 more)
backend/docs/: CELL_STORAGE_GUIDE.md  INTEGRATION_GUIDE.md  MATERIALIZED_VIEWS_GUIDE.md  PHASE_6.6_SUMMARY.md  TESTING.md
backend/scripts/: seed_dev_users.py
backend/tests/: README.md  conftest.py  setup_auth_schema.sql  test_api_calculations.py  test_health.py  test_integration.py  test_integrations_coverage.py  test_migrations.py  test_models.py  test_rls_policies.py  test_startup.py  test_validators.py
(+995 files in other folders)
