[project]
name = "efir-budget-backend"
version = "0.1.0"
description = "FastAPI service for EFIR Budget Planning"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{name = "EFIR", email = "tech@efir.local"}]
dependencies = [
  "fastapi==0.123.4",
  "uvicorn[standard]==0.38.0",
  "pydantic==2.12.5",
  "sqlalchemy==2.0.44",
  "asyncpg==0.30.0",
  "python-dotenv==1.0.1",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "alembic==1.17.2",
  "python-multipart==0.0.20",
  "email-validator==2.2.0",
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "cryptography==44.0.0",
  "httpx==0.28.1",
  "sentry-sdk[fastapi]==2.46.0",
  "structlog==24.4.0",
  "orjson>=3.10.0",
  "redis==7.1.0",
  "hiredis==3.0.0",
  "cashews[redis]==7.3.2",
  "prometheus-client>=0.23.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.14.3",
  "mypy==1.19.0",
  "pytest==9.0.1",
  "httpx==0.28.1",
  "pytest-asyncio==1.3.0",
  "pytest-xdist==3.8.0",
  "aiosqlite==0.20.0",
  "pytest-cov==6.0.0",
  "greenlet>=3.0.0",
  "pip-audit>=2.7.0",  # Security vulnerability scanning
]

[tool.ruff]
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "RUF", "ASYNC"]
ignore = [
    "RUF001", "RUF002", "RUF003",  # Allow × (multiplication sign) in strings/comments/docstrings
    "RUF012",  # Pydantic Config class uses mutable defaults intentionally
    "B008",  # Depends() in defaults is standard FastAPI pattern
    "B904",  # Don't chain HTTPExceptions to avoid exposing internal errors
    "UP037",  # Quoted type annotations needed for SQLAlchemy forward references
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # Imports after sys.path manipulation is standard Alembic pattern
"alembic/versions/*" = ["E501"]  # Allow long lines in migration files (auto-generated)
"app/models/__init__.py" = ["RUF022"]  # __all__ has section comments, can't be auto-sorted
"tests/test_models.py" = ["F406"]  # Allow star import in test function
"tests/**/*.py" = ["E501", "RUF043", "B017", "E741", "ASYNC109"]  # Allow long lines, regex patterns, blind exceptions, ambiguous names in tests
"tests/conftest.py" = ["E402"]  # Imports after env var setup is required for pytest-xdist worker isolation
"app/services/*.py" = ["E501"]  # Allow longer lines for descriptive error messages
"app/api/**/*.py" = ["E501"]  # Allow longer lines in API schemas
"app/schemas/*.py" = ["E501"]  # Allow longer lines for Field descriptions
"app/engine/**/*.py" = ["E501"]  # Allow longer lines in engine models
"app/core/*.py" = ["E501"]  # Allow longer lines in core modules
"app/models/*.py" = ["E501"]  # Allow longer lines for SQL comments
"debug*.py" = ["F541", "RUF010", "F401", "E501"]  # Debug files are temporary, ignore common issues

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false  # Too strict for evolving codebase
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "alembic/", "scripts/"]  # Exclude tests, migrations, and scripts from type checking

[[tool.mypy.overrides]]
module = ["app.models.base"]
# SQLAlchemy Base is dynamically created, ignore typing issues
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.services.*"]
# Service modules under development, will be fixed in dedicated pass
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.api.v1.*"]
# API routes: attr-defined for not-yet-exported functions
# assignment for FastAPI Annotated[..., Depends()] with `= ...` pattern
disable_error_code = ["attr-defined", "assignment"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
